# catalystdb

./: Cargo.toml  README.md
src/: main.rs
src/dbs/: edge.rs  entity.rs  graph.rs  iterator.rs  mod.rs  node.rs  table.rs
src/dbs/ops/: create.rs  define.rs  delete.rs  get.rs  insert.rs  mod.rs  relate.rs  remove.rs  response.rs  retrieve.rs  update.rs  walk.rs
src/doc/: document.rs
src/err/: mod.rs
src/func/: mod.rs
src/graph/: delete.rs  edge.rs  get.rs  mod.rs  node.rs  relate.rs  remove.rs  update.rs  walk.rs
src/ql/: array.rs  condition.rs  direction.rs  edge.rs  expression.rs  fields.rs  id.rs  ident.rs  idiom.rs  mod.rs  number.rs  object.rs  operator.rs  part.rs  path.rs  record.rs  step.rs  strand.rs  table.rs  uuid.rs  value.rs
src/ql/func/: flatten.rs  get.rs  mod.rs  operation.rs
src/ql/serde/: arc_str_serde.rs  de.rs  mod.rs
src/ql/statements/: mod.rs  select.rs  statement.rs
src/ql/traits/: mod.rs
src/resp/: mod.rs
src/server/: mod.rs
