[package]
name = "catalystdb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
anyhow = "1.0.86"
async-trait = "0.1.81"
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
