[package]
name = "catalystdb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
async-trait = "0.1.81"
rayon = "1.10.0"
reblessive = { version = "0.4.2", features = ["tree"] }
serde = { version = "1.0.207", features = ["derive"] }
serde-content = "0.1.0"
serde_json = "1.0.124"
thiserror = "1.0.66"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "v7"] }
